package Ex2;

import java.util.List;

public class Category {
    private String id, name;
    private List<Product> products;

    public void addProduct (Product p) {}

    public void removeProduct (Product p) {}

    public List<Product> getProducts () {
        return products;
    }

    public void getInfo () {}
}
