' Generated by UML Generator
' Encoded: VP7F3i8W3CRlF4MF6ZFZUOT5uycBCV496AsJkC42pCH_xowu3RUPU27qQx_oArrRnurhgfBPYrGrDxm2KN9hDyuPcJUETaAhexmJhDXP8e6GHfJ4sASAjjnHeSqD7WmWaPZ2qVjK4IB5Anh6YJyM7F5WD3R2pUeKkkiyXQkM6FA6AdsbloK5kKwqix6yKoSTfLVFs1MtY5EeCN9jfF1fr4tkP-oPfvrRQUyx1Icw5xOJXszC0F77uQKlmtHAJnCCaISOMdL4EXWvBcIvpFh9MVy3IVBCuihOcXJwpRy1
' URL: http://www.plantuml.com/plantuml/uml/VP7F3i8W3CRlF4MF6ZFZUOT5uycBCV496AsJkC42pCH_xowu3RUPU27qQx_oArrRnurhgfBPYrGrDxm2KN9hDyuPcJUETaAhexmJhDXP8e6GHfJ4sASAjjnHeSqD7WmWaPZ2qVjK4IB5Anh6YJyM7F5WD3R2pUeKkkiyXQkM6FA6AdsbloK5kKwqix6yKoSTfLVFs1MtY5EeCN9jfF1fr4tkP-oPfvrRQUyx1Icw5xOJXszC0F77uQKlmtHAJnCCaISOMdL4EXWvBcIvpFh9MVy3IVBCuihOcXJwpRy1
' Generated on: 2026-01-21T17:52:45.898173400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Category {
  -id: String
  -name: String
  --
  +addProduct(p: Product): void
  +removeProduct(p: Product): void
  +getProducts(): void
  +getInfo(): void
}

class Product {
  -name: String
  -id: String
  -price: double
  --
  +getInfo(): void
  +getName(): String
  +setName(name: String): void
  +getId(): String
  +setId(id: String): void
  +getPrice(): double
  +setPrice(price: double): void
}

Category ..> Product
Product --|> Category
@enduml